# grpc-todo-server-python

./: pyproject.toml  server.py
protos/: todo_service_pb2.py  todo_service_pb2_grpc.py
services/: todo_service.py
